# poetry_test

./: mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: fibonacci.md
src/: fibonacci.py
